--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -105,10 +105,10 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 *   Article content style
 */
 :root {
-    --blockquote-border-size: 4px;
-    --blockquote-background-color: rgb(248 248 248);
+    --blockquote-border-size: 8px;
+    --blockquote-background-color: rgb(240, 240, 240);
 
-    --heading-border-size: 4px;
+    --heading-border-size: 8px;
 
     --link-background-color: 189, 195, 199;
     --link-background-opacity: 0.5;
