--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -304,7 +304,8 @@
         gap: 10px;
 
         figure {
-            margin: 30px;
+            margin-right: 28px;
+            margin-left: 30px;
         }
     }
 
