--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -431,19 +431,24 @@
         }
     }
 
-    /// Negative margins
+    /// Negative margins1
     blockquote,
     figure,
     .highlight,
-    pre,
+    pre  {
+        width: 100%
+    }
+
+    /// Negative margins2
     .gallery,
     .video-wrapper,
     .table-wrapper,
-    .s_video_simple {
+    .s_video_simple  {
         margin-left: calc((var(--card-padding)) * -1);
         margin-right: calc((var(--card-padding)) * -1);
         width: calc(100% + var(--card-padding) * 2);
     }
+
 
     /// Make long KaTeX equations scrollable in the x-axis
     .katex-display > .katex {
