--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,7 +1,11 @@
 {{- $ThemeVersion := "3.26.0" -}}
 <footer class="site-footer">
-   
-
+    {{ $scratch := newScratch }}
+    {{ range (where .Site.Pages "Kind" "page") }}
+        {{ if .WordCount }}
+            {{ $scratch.Add "total" .WordCount }}
+        {{ end }}
+    {{ end }}
  
     <section class="copyright">
         &copy; 
@@ -21,7 +25,7 @@
         {{- $DesignedBy := `<a href="https://jimmycai.com" target="_blank" rel="noopener">Jimmy</a>` -}}
 
         Built with Hugo & Stack, Powered by Github.<br>
-        
+        共 {{ len (where .Site.RegularPages "Section" "post") }} 篇文章, 总计 {{ $scratch.Get "total" }} 字. <br>
         <a href="https://blogscn.fun/" title="BLOGS·CN" target="_blank" > <img src="/links/blogcn.png" alt="本站已加入BLOGS·CN" style="width:auto;height:10px;"> </a>
     </section>
 </footer>
