--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -87,6 +87,7 @@
     z-index: 1;
     transition: box-shadow 0.5s ease;
     display: flex;
+    align-self: center;
     flex-direction: column;
     gap: var(--sidebar-element-separation);
 
