--- a/layouts/partials/data/title.html
+++ b/layouts/partials/data/title.html
@@ -8,7 +8,11 @@
     {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
     {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
     {{ $filtered := ($pages | intersect $notHidden) }}
-    {{ $pag := .Paginate ($filtered) }}
+    {{ $excluded := where $filtered "Params.categories" "intersect" (slice "瞬间" "moments") }}
+    {{ $filteredWithoutExcluded := $filtered | complement $excluded }}
+    {{ $pag := .Paginate $filteredWithoutExcluded }}
+
+    
 
     {{ if .Paginator.HasPrev }}
         <!-- Paginated. Append page number to title -->
