--- a/layouts/partials/data/title.html
+++ b/layouts/partials/data/title.html
@@ -4,6 +4,12 @@
 {{- if .IsHome -}}
     <!-- Homepage, and it's pagination -->
 
+    {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
+    {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
+    {{ $filtered := ($pages | intersect $notHidden) }}
+    {{ $pag := .Paginate ($filtered) }}
+
+{{/* 
     <!-- Build paginator -->
     {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
     {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
@@ -11,7 +17,7 @@
     {{ $excluded := where $filtered "Params.categories" "intersect" (slice "瞬间" "moments") }}
     {{ $filteredWithoutExcluded := $filtered | complement $excluded }}
     {{ $pag := .Paginate $filteredWithoutExcluded }}
-
+*/}}
     
 
     {{ if .Paginator.HasPrev }}
