--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,6 +1,6 @@
 .article-summary {
     font-size: 16px; /* 设置字体大小 */
-    color: #666; /* 设置字体颜色 */
+    color: var(--body-text-color); /* 设置字体颜色 */
     margin: 0px; /* 设置底部外边距 */
     line-height: 1.5; /* 设置行高 */
     font-style: italic; /* 设置字体样式为斜体 */
