--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -16,3 +16,4 @@
 		}());
 </script>
 
+<script defer src="https://cloud.umami.is/script.js" data-website-id="165d4bc4-fac9-44af-bad2-8a676be7e57c"></script>
