--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -16,4 +16,4 @@
 		}());
 </script>
 
-<script defer src="https://cloud.umami.is/script.js" data-website-id="165d4bc4-fac9-44af-bad2-8a676be7e57c"></script>
+<script defer src="https://analysis.hyruo.com/script.js" data-website-id="49effb29-cfd2-45a7-a019-30dab4f15301"></script>
