--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -17,3 +17,5 @@
 </script>
 
 <script defer src="https://analysis.hyruo.com/script.js" data-website-id="49effb29-cfd2-45a7-a019-30dab4f15301"></script>
+
+<meta name="baidu-site-verification" content="codeva-vbSQ2LcYAi" />
