--- a/layouts/partials/comments/provider/disqusjs.html
+++ b/layouts/partials/comments/provider/disqusjs.html
@@ -2,7 +2,7 @@
 {{- $disqusjs := .Site.Params.Comments.disqusjs -}}
 {{- if and (not $pc.Disable) (and $disqusjs.Shortname $disqusjs.ApiKey) -}}
 
-{{- $style := resources.Get "scss/partials/comments/disqusjs.scss" | resources.ToCSS | minify -}}
+{{- $style := resources.Get "scss/partials/comments/disqusjs.scss" | toCSS | minify -}}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
 <div class="disqus-container">
@@ -27,7 +27,7 @@
             }
 
             let d = document.createElement('script');
-            d.src = 'https://cdn.jsdelivr.us/npm/disqusjs@1.3/dist/disqus.js';
+            d.src = 'https://cdn.jsdelivr.net/npm/disqusjs@1.3/dist/disqus.js';
             d.async = false;
             document.body.appendChild(d);
             d.onload = () => {
