--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -6,7 +6,7 @@
 {{ with .Params.Keywords }}<meta name="keywords" content="{{ delimit . ", " }}">{{ end }}
 
 {{- $title := partial "data/title" . -}}
-<title>{{ $title }}</title>
+<title>{{ $title }} - {{ .Site.Title }}</title>
 
 <link rel='canonical' href='{{ .Permalink }}'>
 
