--- a/layouts/partials/data/title.html
+++ b/layouts/partials/data/title.html
@@ -1,5 +1,5 @@
 {{- $title := .Title -}}
-{{- $siteTitle := .Site.Params.sidebar.subtitle -}}
+{{- $siteTitle := .Site.Title -}}
 
 {{- if .IsHome -}}
     <!-- Homepage, and it's pagination -->
