--- a/layouts/partials/data/title.html
+++ b/layouts/partials/data/title.html
@@ -1,5 +1,5 @@
 {{- $title := .Title -}}
-{{- $siteTitle := .Site.Title -}}
+{{- $siteTitle := "Lawtee" -}} 
 
 {{- if .IsHome -}}
     <!-- Homepage, and it's pagination -->
