--- a/layouts/partials/data/title.html
+++ b/layouts/partials/data/title.html
@@ -4,32 +4,24 @@
 {{- if .IsHome -}}
     <!-- Homepage, and it's pagination -->
 
+    <!-- Build paginator -->
     {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
     {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
     {{ $filtered := ($pages | intersect $notHidden) }}
-    
-    {{/* 按发布时间从新到旧排序 */}}
-    {{ $filtered = $filtered.ByDate.Reverse }}
-    
-    {{/* 获取 "瞬间" 分类下的所有文章 */}}
-    {{ $shunjian := where $filtered "Params.categories" "intersect" (slice "瞬间") }}
-    
-    {{/* 保留 "瞬间" 分类下的最新两篇文章 */}}
-    {{ $shunjianLatest := first 2 $shunjian }}
-    
-    {{/* 排除 "瞬间" 分类下的其他文章 */}}
-    {{ $filtered = $filtered | complement $shunjian }}
-    
-    {{/* 将最新的两篇 "瞬间" 文章重新插入到它们原本的位置 */}}
-    {{ $filtered = $filtered | append $shunjianLatest }}
-    
-    {{/* 重新按发布时间排序 */}}
-    {{ $filtered = $filtered.ByDate.Reverse }}
-    
-    {{/* 进行分页 */}}
     {{ $pag := .Paginate ($filtered) }}
 
-{{/* 
+{{/* 筛选显示瞬间中前2条内容
+    {{ $filtered = $filtered.ByDate.Reverse }} 
+    {{ $shunjian := where $filtered "Params.categories" "intersect" (slice "瞬间") }} 
+    {{ $shunjianLatest := first 2 $shunjian }}
+    {{ $filtered = $filtered | complement $shunjian }}
+    {{ $filtered = $filtered | append $shunjianLatest }}
+    {{ $filtered = $filtered.ByDate.Reverse }}
+    {{ $pag := .Paginate ($filtered) }}
+*/}}
+
+
+{{/* 筛选排除瞬间内容
     <!-- Build paginator -->
     {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
     {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
