--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -9,6 +9,10 @@
 <title>{{ $title }} - {{ .Site.Title }}</title>
 
 <link rel='canonical' href='{{ .Permalink }}'>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
 {{- partial "head/style.html" . -}}
 {{- partial "head/script.html" . -}}
@@ -18,9 +22,11 @@
     <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
 {{- end -}}
 
+{{/*
 {{ with .Site.Params.favicon }}
     <link rel="shortcut icon" href="{{ . | relURL }}" />
 {{ end }}
+*/}}
 
 {{- template "_internal/google_analytics.html" . -}}
 {{- partial "head/custom.html" . -}}
