--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -20,3 +20,5 @@
 {{/*
 <script defer src="https://analysis.hyruo.com/script.js" data-website-id="49effb29-cfd2-45a7-a019-30dab4f15301"></script>
 */}}
+
+<script defer src="https://stats.lawtee.com/script.js" data-website-id="651f6757-32fc-4bee-8dab-445cd2f96d2f"></script>
