--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -88,6 +88,7 @@
     transition: box-shadow 0.5s ease;
     display: flex;
     align-self: center;
+    align-items: center;
     flex-direction: column;
     gap: var(--sidebar-element-separation);
 
