--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,11 +1,11 @@
 {{- $ThemeVersion := "3.26.0" -}}
 {{ $totalWords := 0 }}
 {{ $totalPosts := len .Site.RegularPages }}
-{{/*
+
 {{ range .Site.RegularPages }}
   {{ $totalWords = add $totalWords (countwords .Content) }}
 {{ end }}
-*/}}
+
 <footer class="site-footer">
     <section class="copyright">
         &copy; 
@@ -24,8 +24,8 @@
         {{- $Theme := printf `<b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="%s">Stack</a></b>` $ThemeVersion -}}
         {{- $DesignedBy := `<a href="https://jimmycai.com" target="_blank" rel="noopener">Jimmy</a>` -}}
         Built with Hugo, Powered by Github.<br>
-        {{ i18n "total_posts" (dict "Count" 318) }} {{ i18n "total_words" (dict "Count" 873345) }} <br>
-        {{/*{{ i18n "total_posts" (dict "Count" $totalPosts) }} {{ i18n "total_words" (dict "Count" $totalWords) }} <br>*/}}
+        {{/*{{ i18n "total_posts" (dict "Count" 318) }} {{ i18n "total_words" (dict "Count" 873345) }} <br>*/}}
+        {{ i18n "total_posts" (dict "Count" $totalPosts) }} {{ i18n "total_words" (dict "Count" $totalWords) }} <br>
         <a href="https://blogscn.fun/" title="BLOGS·CN" target="_blank" > <img src="/links/blogcn.png" alt="本站已加入BLOGS·CN" style="width:auto;height:10px;"> </a>
     </section>
 </footer>
