--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -55,3 +55,15 @@ h5 {
   font-weight: bold;
   unicode-bidi: isolate;
 }
+
+.widget-archive--list ul {
+  list-style-type: none;
+  padding-left: 25px;
+  padding-right:25px;
+  padding-bottom:0px;
+  padding-top:10px
+}
+
+.widget-archive--list ul li {
+  margin-bottom: 10px; /* 每个标题之间的间距 */
+}
