--- a/layouts/partials/sidebar/right.html
+++ b/layouts/partials/sidebar/right.html
@@ -14,7 +14,7 @@
         {{ end }}
 
         
-        {{ $url := "https://news.lawtee.com/wp-json/wp/v2/posts?per_page=7" }}
+        {{ $url := "https://news.hyruo.com/wp-json/wp/v2/posts?per_page=7" }}
         {{ $remoteData := resources.GetRemote $url }}
         {{ $posts := slice }}
         
