--- a/layouts/partials/sidebar/right.html
+++ b/layouts/partials/sidebar/right.html
@@ -14,7 +14,7 @@
         {{ end }}
 
         {{ $url := "https://web.mji.ro/wp-json/wp/v2/posts?per_page=7" }}
-        {{ $remoteData := resources.GetRemote $url }}
+        {{ $remoteData := resources.GetRemote $url (dict "cache" false) }}
         {{ $posts := slice }}
         
         {{ if $remoteData }}
