--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -5,42 +5,40 @@
 {{- $Height := 0 -}}
 {{- $Srcset := "" -}}
 
-{{/* SVG and external images won't work with gallery layout, because their width and height attributes are unknown */}}
+{{/* SVG和外部图片无法使用画廊布局，因为其宽高未知 */}}
 {{- $galleryImage := false -}}
 
 {{- if $image -}}
-	{{- $notSVG := ne (path.Ext .Destination) ".svg" -}}
-	{{- $Permalink = $image.RelPermalink -}}
+    {{- $notSVG := ne (path.Ext .Destination) ".svg" -}}
+    {{- $Permalink = $image.RelPermalink -}}
 
-	{{- if $notSVG -}}
-		{{- $Width = $image.Width -}}
-		{{- $Height = $image.Height -}}
-		{{- $galleryImage = true -}}
+    {{- if $notSVG -}}
+        {{- $Width = $image.Width -}}
+        {{- $Height = $image.Height -}}
+        {{- $galleryImage = true -}}
 
-		{{- if (default true .Page.Site.Params.imageProcessing.content.enabled) -}}
-			{{- $small := $image.Resize `480x` -}}
-			{{- $big := $image.Resize `1024x` -}}
-			{{- $Srcset = printf `%s 480w, %s 1024w` $small.RelPermalink $big.RelPermalink -}}
-		{{- end -}}
-	{{- end -}}
-{{- end -}}
+        {{- if (default true .Page.Site.Params.imageProcessing.content.enabled) -}}
+            {{- $small := $image.Resize `480x` -}}
+            {{- $big := $image.Resize `1024x` -}}
+            {{- $Srcset = printf `%s 480w, %s 1024w` $small.RelPermalink $big.RelPermalink -}}
+        {{- end -}}
+    {{- end -}}
 
-<img src="{{ $Permalink }}"
-	{{ with $Width }}width="{{ . }}"{{ end }}
-	{{ with $Height }}height="{{ . }}"{{ end }}
-	{{ with $Srcset }}srcset="{{ . }}"{{ end }}
-	loading="lazy"
-	{{ with $alt }}
-		alt="{{ . }}"
-	{{ end }}
-	{{ if $galleryImage }}
-		class="gallery-image" 
-		data-flex-grow="{{ div (mul $image.Width 100) $image.Height }}"
-		data-flex-basis="{{ div (mul $image.Width 240) $image.Height }}px"
-	{{ end }}
->
-
+    <img src="{{ $Permalink }}"
+        {{ with $Width }}width="{{ . }}"{{ end }}
+        {{ with $Height }}height="{{ . }}"{{ end }}
+        {{ with $Srcset }}srcset="{{ . }}"{{ end }}
+        loading="lazy"
+        {{ with $alt }}
+            alt="{{ . }}"
+        {{ end }}
+        {{ if $galleryImage }}
+            class="gallery-image" 
+            data-flex-grow="{{ div (mul $image.Width 100) $image.Height }}"
+            data-flex-basis="{{ div (mul $image.Width 240) $image.Height }}px"
+        {{ end }}
+    >
 {{- else -}}
-  <!-- 处理图片未找到的情况 -->
-  <img src="{{ "links/error.webp" | relURL }}" alt="Default Image" loading="lazy">
+    <!-- 处理图片未找到的情况 -->
+    <img src="{{ "links/error.webp" | relURL }}" alt="Default Image" loading="lazy">
 {{- end -}}
