update pyq sidebar

--- a/layouts/_default/pyq.html
+++ b/layouts/_default/pyq.html
@@ -156,3 +156,7 @@
     }
 </style>
 {{ end }}
+
+{{ define "right-sidebar" }}
+    {{ partial "sidebar/right.html" (dict "Context" . "Scope" "homepage") }}
+{{ end }}
