--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -209,7 +209,7 @@
     line-height: var(--article-line-height);
 
     & > p {
-        margin: 1.5em 0;
+        margin: 0.6em 0;
     }
 
     h1,
@@ -218,8 +218,8 @@
     h4,
     h5,
     h6 {
-        margin-inline-start: calc((var(--card-padding)) * -1);
-        padding-inline-start: calc(var(--card-padding) - var(--heading-border-size));
+        margin-inline-start: 0;  /* 直接设置为0 */
+        padding-inline-start: var(--card-padding);  /* 移除减去的border-size */
         border-inline-start: var(--heading-border-size) solid var(--accent-color);
         position: relative;
 
@@ -227,7 +227,7 @@
             transition: opacity 0.3s ease;
             opacity: 0;
             position: absolute;
-            left: 0;
+            left: calc(-1 * var(--heading-border-size));  /* 向左移动border-size的距离 */
             width: var(--card-padding);
             text-align: center;
             color: var(--accent-color);
