--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,7 +11,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #e5e5e5;
+    --body-background: #f5f5f7;
 
     --accent-color: #10171e;
     --accent-color-darker: #2c3e50;
@@ -92,10 +92,10 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 */
 :root {
     --article-font-family: var(--base-font-family);
-    --article-font-size: 1.5rem;
+    --article-font-size: 1.65rem;
 
     @include respond(md) {
-        --article-font-size: 1.5rem;
+        --article-font-size: 1.65rem;
     }
 
     --article-line-height: 1.85;
